# fastapi-on-aws-lambda

./: .env.example  .gitignore  LICENSE  README.md  lambda_deploy.sh  lambda_zip.sh  pyproject.toml  setup.cfg
.github/workflows/: lint_and_test.yml
app/: auth.py  exceptions.py  main.py  s3.py  utils.py
app/models/: items.py
app/repositories/: _base.py  _validators.py  items.py
app/routers/: items.py
app/settings/: api.py  repository.py
docs/: DEPLOYMENT.md
tests/unit/repositories/: test_items.py
tests/unit/routers/: test_items.py
tests/unit/settings/: test_api.py
